feat: initial setup of Auth Server with Clean Architecture, JWT, and Token Rotation
This commit introduces the core authentication infrastructure using Clean Architecture principles. It includes the complete flow for User Registration, Login, and Secure Token Management.

Key Implementations:
- **Architecture:** Set up N-Tier Clean Architecture (Domain, Application, Infrastructure, Persistence, API).
- **Identity:** Configured ASP.NET Core Identity with `Guid` keys and custom `AppUser` entity.
- **Security:** Implemented JWT (JSON Web Token) generation with Symmetric Security Key.
- **Token Management:**
  - Added `RefreshToken` entity with audit fields (`CreatedByIp`, `RevokedByIp`, `ReplacedByToken`).
  - Implemented **Token Rotation** mechanism to detect token theft and ensure secure session renewal.
  - Added `RevokeToken` (Logout) functionality.
- **CQRS:** Implemented logic using MediatR pattern:
  - `CreateUserCommand`: User registration.
  - `LoginCommand`: Authenticates user and generates Access/Refresh tokens.
  - `RefreshTokenCommand`: Validates and rotates tokens.
  - `RevokeTokenCommand`: Invalidates the refresh token.
- **API:**
  - Created `AuthController` with standardized endpoints.
  - Implemented `ServiceResponse<T>` wrapper for consistent API responses.
  - Configured Swagger/OpenAPI support.
- **Database:**
  - Configured EF Core `AppDbContext`.
  - Applied migrations for Identity and RefreshToken tables.
  - Fix: Made `IpAddress` and `ReplacedByToken` fields nullable to handle edge cases properly.

--- a/Plms.Identity.API/appsettings.json
+++ b/Plms.Identity.API/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=plmsidentity;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False;Command Timeout=30"
+  },
+  "JwtSettings": {
+    "Secret": "bu_cok_gizli_ve_uzun_bir_anahtar_olmali_super_secret_key_12345",
+    "Issuer": "Plms.AuthServer",
+    "Audience": "Plms.Clients",
+    "AccessTokenExpirationMinutes": 15,
+    "RefreshTokenExpirationDays": 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
