--- a/Plms.Identity.Application/Plms.Identity.Application.csproj
+++ b/Plms.Identity.Application/Plms.Identity.Application.csproj
@@ -5,12 +5,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Auth\Common\" />
     <Folder Include="Features\Auth\Queries\" />
     <Folder Include="Features\Users\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Dtos\" />
-    <Folder Include="Wrappers\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +14,7 @@
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
     <PackageReference Include="MediatR" Version="14.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
   </ItemGroup>
 
   <PropertyGroup>
