--- a/Plms.Identity.Infrastructure/Plms.Identity.Infrastructure.csproj
+++ b/Plms.Identity.Infrastructure/Plms.Identity.Infrastructure.csproj
@@ -7,10 +7,10 @@
 
   <ItemGroup>
     <Folder Include="Adapters\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="10.0.2" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
   </ItemGroup>
 
