--- a/AuthServer.Identity.Application/AuthServer.Identity.Application.csproj
+++ b/AuthServer.Identity.Application/AuthServer.Identity.Application.csproj
@@ -1,12 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <Compile Remove="Features\Users\**" />
+    <EmbeddedResource Remove="Features\Users\**" />
+    <None Remove="Features\Users\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AuthServer.Identity.Domain\AuthServer.Identity.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Features\Auth\Queries\" />
-    <Folder Include="Features\Users\" />
   </ItemGroup>
 
   <ItemGroup>
